[project]
name = "rag-competition"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "loguru>=0.7.0",
    "numpy>=2.4.5",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "sentence-transformers==5.4.1",
    "uvicorn>=0.34.0",
]
