[project]
name = "rag-competition"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.14.2",
    "fastapi==0.136.3",
    "loguru==0.7.3",
    "numpy==2.4.6",
    "openai==2.38.0",
    "pydantic==2.13.4",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.29",
    "requests==2.34.2",
    "sentence-transformers>=5.2.0",
    "uvicorn==0.48.0",
]
